fixed home page overflow

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -2,10 +2,9 @@
 
 #home {
     padding: $margin-medium 0;
+    align-items: center;
     img {
-        width: 80%;
-        margin-left: 50%;
-        transform: translateX(-50%);
+        width: 100%;
         margin-bottom: $margin-small;
     }
     p { line-height: 2; }
