--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,6 +20,11 @@
   width: $img-extra-large; 
 }
 
+body {
+  width: 100vw;
+}
+
+
 html { scroll-behavior: smooth; }
 
 a { 
